--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,38 @@ steps:
     tasks: 'assembleDebug test'
   displayName: gradlew assembleDebug test
 
+- task: Bash@3
+  inputs:
+    targetType: 'inline'
+    script: |
+      #!/usr/bin/env bash
+      
+      # Install AVD files
+      echo "y" | $ANDROID_HOME/tools/bin/sdkmanager --install 'system-images;android-27;google_apis;x86'
+      
+      # Create emulator
+      echo "no" | $ANDROID_HOME/tools/bin/avdmanager create avd -n xamarin_android_emulator -k 'system-images;android-27;google_apis;x86' --force
+      
+      $ANDROID_HOME/emulator/emulator -list-avds
+      
+      echo "Starting emulator"
+      
+      # Start emulator in background
+      nohup $ANDROID_HOME/emulator/emulator -avd xamarin_android_emulator -no-snapshot > /dev/null 2>&1 &
+      $ANDROID_HOME/platform-tools/adb wait-for-device shell 'while [[ -z $(getprop sys.boot_completed | tr -d '\r') ]]; do sleep 1; done; input keyevent 82'
+      
+      $ANDROID_HOME/platform-tools/adb devices
+      
+      echo "Emulator started"
+
+- task: AppCenterTest@1
+  inputs:
+    appFile: '$(Build.ArtifactStagingDirectory)/*.apk'
+    artifactsDirectory: '$(Build.ArtifactStagingDirectory)/AppCenterTest'
+    frameworkOption: 'appium'
+    credentialsOption: 'serviceEndpoint'
+    localeOption: 'en_US'
+
 - task: CopyFiles@2
   inputs:
     contents: '**/*.apk'
@@ -32,3 +64,11 @@ steps:
     artifactName: 'drop'
     artifactType: 'container'
   displayName: Publish artifacts
+
+- task: AppCenterDistribute@3
+  inputs:
+    serverEndpoint: 'App Center'
+    appSlug: 'senyum/MyAndroidApp'
+    appFile: '**/*.apk'
+    releaseNotesOption: 'input'
+    destinationType: 'groups'
