--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,11 @@ steps:
     appFile: '/Users/runner/runners/2.170.1/work/1/a/app/build/outputs/apk/app-prod-debug.apk'
     artifactsDirectory: '$(Build.ArtifactStagingDirectory)/AppCenterTest'
     frameworkOption: 'appium'
+    appiumBuildDirectory: '$(build.artifactStagingDirectory)/DerivedData/Build/Products/Debug-andrioid'
     credentialsOption: 'serviceEndpoint'
+    serverEndpoint: 'App Center'
+    appSlug: 'senyum/MyAndroidApp'
+    devices: 'senyum/d187960b'
     localeOption: 'en_US'
 
 - task: PublishBuildArtifacts@1
