Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -56,7 +56,7 @@ steps:
     appFile: '$(build.artifactStagingDirectory)/app/build/outputs/apk/app-prod-debug.apk'
     artifactsDirectory: '$(Build.ArtifactStagingDirectory)/AppCenterTest'
     frameworkOption: 'appium'
-    appiumBuildDirectory: '$(Build.ArtifactStagingDirectory)/AppCenterTest'
+    appiumBuildDirectory: '$(Build.ArtifactStagingDirectory)'
     credentialsOption: 'serviceEndpoint'
     serverEndpoint: 'App Center'
     appSlug: 'senyum/MyAndroidApp'
